--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,20 @@
-<form action="https://formspree.io/f/xwkgeogn" method="POST">
-    <label for="name">Naam:</label>
-    <input type="text" id="name" name="name">
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="_replyto">
-
-    <label for="message">Bericht:</label>
-    <textarea id="message" name="message"></textarea>
-
-    <button type="submit">Verstuur</button>
-</form>
+<div class="form-container">
+    <h2>Neem contact met ons op</h2>
+    <form action="https://formspree.io/f/xwkgeogn" method="POST">
+        <div class="form-field">
+            <label for="name">Naam:</label>
+            <input type="text" id="name" name="name">
+        </div>
+        <div class="form-field">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="_replyto">
+        </div>
+        <div class="form-field">
+            <label for="message">Bericht:</label>
+            <textarea id="message" name="message"></textarea>
+        </div>
+        <div class="form-field">
+            <button type="submit">Verstuur</button>
+        </div>
+    </form>
+</div>
