--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
                 <li><a href="privacy.html">Privacy Statement</a></li>
                 <li><a href="guidelines.html">Guidelines</a></li>
                 <li><a href="contact.html">Contact</a></li>
