Website tot visitekaartje omgebouwd

--- a/FAQ.html
+++ b/FAQ.html
@@ -8,12 +8,39 @@
 </head>
 <body>
     <header>
-        <h1>Veelgestelde vragen (FAQ)</h1>
+        <div class="header-content">
+            <img src="assets/icon.png" alt="Swivel Logo" id="logo">
+            <h1>swivel</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="FAQ.html" class="active">FAQ</a></li>
+                <li><a href="privacy.html">Privacy</a></li>
+                <li><a href="guidelines.html">Richtlijnen</a></li>
+                <li><a href="gebruiksvoorwaarden.html">Voorwaarden</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
+        <section>
+            <h2>Veelgestelde vragen</h2>
+        </section>
+
+        <section class="faq-section">
+            <h2>Kan ik een demo krijgen?</h2>
+            <p>Dat kan zeker! Neem contact met ons op voor de mogelijkheden.</p>
+        </section>
+
+        <section class="faq-section">
+            <h2>Moet ik zelf zoektermen invoeren?</h2>
+            <p>No way! Swivel is een platform dat jouw ongemak in het zoeken van een baan/personeel uit handen neemt. Jij zet je CV/vacature op het platform, en dan genereren wij vacatures/CVs die passen bij jou. </p>
+        </section>
+
         <section class="faq-section">
             <h2>Is Swivel beschikbaar in het buitenland?</h2>
-            <p>Momenteel bieden we onze services alleen aan in Nederland.</p>
+            <p>Momenteel bieden we onze services alleen aan in Nederland en Belgiê.</p>
         </section>
 
         <section class="faq-section">
@@ -25,7 +52,7 @@
 
     </main>
     <footer>
-        <p>&copy; 2023 Swivel</p>
+        <p>&copy; 2024 Swivel</p>
     </footer>
 </body>
 </html>
