--- a/privacy.html
+++ b/privacy.html
@@ -8,9 +8,26 @@
 </head>
 <body>
     <header>
-        <h1>Privacybeleid van Swivel</h1>
+        <div class="header-content">
+            <img src="assets/icon.png" alt="Swivel Logo" id="logo">
+            <h1>swivel</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="FAQ.html" >FAQ</a></li>
+                <li><a href="privacy.html" class="active">Privacy</a></li>
+                <li><a href="guidelines.html">Richtlijnen</a></li>
+                <li><a href="gebruiksvoorwaarden.html">Voorwaarden</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
+        <section>
+            <h2>Privacy verklaring</h2>
+        </section>
+
         <section>
             <h2>1. Inleiding</h2>
             <p>Bij Swivel zetten we ons in voor de bescherming van uw privacy. Dit beleid is bedoeld om u inzicht te geven in hoe we persoonlijke gegevens verzamelen, gebruiken en beschermen in onze rol als bemiddelaar tussen jobzoekenden en recruiters.</p>
@@ -88,7 +105,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Swivel</p>
+        <p>&copy; 2024 Swivel</p>
     </footer>
 </body>
 </html>
