--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,53 @@
-<div class="form-container">
-    <h2>Neem contact met ons op</h2>
-    <form action="https://formspree.io/f/xwkgeogn" method="POST">
-        <div class="form-field">
-            <label for="name">Naam:</label>
-            <input type="text" id="name" name="name">
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact - Swivel</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="header-content">
+            <img src="assets/icon.png" alt="Swivel Logo" id="logo">
+            <h1>swivel</h1>
         </div>
-        <div class="form-field">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="_replyto">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="privacy.html">Privacy</a></li>
+                <li><a href="guidelines.html">Richtlijnen</a></li>
+                <li><a href="gebruiksvoorwaarden.html">Voorwaarden</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="form-container">
+            <h2>Neem contact met ons op</h2>
+            <form action="https://formspree.io/f/xwkgeogn" method="POST">
+                <div class="form-field">
+                    <label for="name">Naam:</label>
+                    <input type="text" id="name" name="name">
+                </div>
+                <div class="form-field">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="_replyto">
+                </div>
+                <div class="form-field">
+                    <label for="message">Bericht:</label>
+                    <textarea id="message" name="message"></textarea>
+                </div>
+                <div class="form-field">
+                    <button type="submit">Verstuur</button>
+                </div>
+            </form>
         </div>
-        <div class="form-field">
-            <label for="message">Bericht:</label>
-            <textarea id="message" name="message"></textarea>
-        </div>
-        <div class="form-field">
-            <button type="submit">Verstuur</button>
-        </div>
-    </form>
-</div>
+    </main>
+    <footer>
+        <p>&copy; 2024 Swivel</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
