--- a/KirkPrivacy.html
+++ b/KirkPrivacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Kirk</title>
+    <title>Privacy Policy - Krik</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -57,7 +57,7 @@
         <h2>Collecting and Using Your Personal Data</h2>
         <h3>Types of Data Collected</h3>
         <h4>Personal Data</h4>
-        <p>We utilize Google AdMob services to generate advertisements. Google AdMob may collect data to select personalized ads. For more information we refer you to the privacy policy of Google AdMob.</p>
+        <p>Krik utilizes Google AdMob services to generate advertisements. Google AdMob may collect data to select personalized ads. For more information we refer you to the privacy policy of Google AdMob.</p>
         <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information that can be used to contact or identify You. Personally identifiable information may include, but is not limited to:</p>
         <ul>
         <li>Usage Data</li>
