--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="guidelines.html">Richtlijnen</a></li>
                 <li><a href="gebruiksvoorwaarden.html">Voorwaarden</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="KrikPrivacy.html">Krik privacy policy</a></li>
             </ul>
         </nav>
     </header>
