--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="gebruiksvoorwaarden.html">Voorwaarden</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="KrikPrivacy.html">Krik privacy policy</a></li>
+                <li><a href="app-ads.text">-</a></li>
             </ul>
         </nav>
     </header>
